Correct spacing around header bar.

--- a/resources/public/toto-desktop.css
+++ b/resources/public/toto-desktop.css
@@ -150,7 +150,7 @@ div#header {
    background: #e0e0e0;
    color: #202020;
 
-   padding: 10px;
+   padding: 0.7em;
    height: 1em;
    position: fixed;
    width: 100%;
@@ -160,7 +160,7 @@ div#header {
 div#header div.right {
     float: right;
     vertical-align: middle;
-    padding-right: 1em;;
+    padding-right: 1.4em;
 }
 
 div#footer {
